# SecretNetwork

./: .cargo.toml  .dockerignore  .env.local  .gitignore  .gitmodules  .gitpod.yml  .golangci.yaml  .golangci.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  Dockerfile.azure  Dockerfile.base  Dockerfile.enclave-test  Dockerfile.testnet  Dockerfile_build_deb  Dockerfile_devnet  LICENSE  Ledger.md  Makefile  Makefile.ledger  README.md  SECURITY.md  app.go  azure-pipelines.yml  buf.gen.swagger.yaml  docker-compose.ci.yaml  docker-compose.yaml  docker-compose.yml  docker-compose_sw.yaml  enigma-1-genesis.json  enigma-1-proposal-3.json  enigma-node.service  enigma-testnet-2-genesis.json  enigma-testnet-genesis.json  exported-enigma-testnet-1-genesis.json  genesis-enigma-testnet-1-2.json  genesis-enigma-testnet-1.json  go.mod  go.sum  (+9 more)
check-hw/: .gitignore  Cargo.toml  Makefile  README.md  build.rs  rust-toolchain
check-hw/src/: enclave.rs  enclave_api.rs  main.rs  types.rs
cosmwasm/contracts/debug-print/: Cargo.toml
cosmwasm/contracts/escrow/: Cargo.toml  Importing.md  README.md
cosmwasm/enclaves/: Cargo.toml  Xargo.toml  rust-toolchain
cosmwasm/enclaves/execute/: Cargo.toml  Enclave.config.prod.xml  Enclave.config.xml  Enclave.edl  Enclave.lds  Makefile
cosmwasm/enclaves/ffi-types/: Cargo.toml  cbindgen.toml
cosmwasm/enclaves/query/: .gitignore  Cargo.toml  Enclave.config.xml  Enclave.edl  Makefile  query.manifest.template  secret-query-enclave.manifest.template
cosmwasm/enclaves/test/: .gitignore  Cargo.toml  Makefile  build.rs
cosmwasm/enclaves/xargo/: x86_64-unknown-linux-sgx.json
cosmwasm/lib/enclave-ffi-types/: Cargo.toml  build.rs  cbindgen.toml  enclave-ffi.h
cosmwasm/lib/sgx-vm/: Cargo.toml
cosmwasm/lib/wasmi-runtime/: .gitignore  Cargo.toml  Enclave.config.xml  Enclave.edl  Makefile  Xargo.toml  rust-toolchain  wasmi-runtime.edl
go-cosmwasm/: .editorconfig  .gitignore  Cargo.toml  Dockerfile.alpine  Dockerfile.centos7  Dockerfile.cross  Makefile  README.md  build.rs  cbindgen.toml  lib.go  rust-toolchain
go-cosmwasm/api/: api_test.go  bindings.h  callbacks.go  callbacks_cgo.go  callbacks_cgo_mock.go  callbacks_mock.go  callbacks_nosgx.go  ecall_client.go  ecall_client_stub.go  ecall_record.go  ecall_record_stub.go  gramine.go  iterator.go  iterator_test.go  lib.go  lib_mock.go  lib_nosgx.go  lib_test.go  libgo_cosmwasm.dylib  link_muslc.go  link_std.go  link_std_sw.go  link_test.go  link_tests.go  logger.go  memory.go  mock_failure_test.go  mock_test.go  ocall_stream.go  ocall_stream_stub.go  recording_store.go  recording_store_stub.go  replay.go  store.go
go-cosmwasm/api/testdata/: download_releases.sh  hackatom.wasm  queue.wasm  reflect.wasm
go-cosmwasm/cmd/: main.go
go-cosmwasm/spec/: Index.md  Specification.md
go-cosmwasm/src/: api.rs  db.rs  enclave_tests.rs  error.rs  iterator.rs  lib.rs  logger.rs  memory.rs  querier.rs  tests.rs
go-cosmwasm/src/error/: go.rs  mod.rs  rust.rs
go-cosmwasm/tests/: enclave.rs
go-cosmwasm/types/: env.go  env_test.go  msg.go  queries.go  queries_test.go  stderror.go  systemerror.go  types.go  types_test.go
go-cosmwasm/types/v010/: msg_v010.go
go-cosmwasm/types/v016/: ibc.go  msg_v016.go  subcall.go
go-cosmwasm/types/v1/: ibc.go  msg_v1.go  subcall.go  type.go
go-sgxvm/: .gitignore  Cargo.toml  Makefile  NOTICE  README.md  build.rs  cbindgen.toml  go.mod  go.sum  lib.go
go-sgxvm/cmd/attestation/: main.go
go-sgxvm/internal/api/: attestation.go  attestation_mock.go  bindings.h  callbacks.go  callbacks_cgo.go  callbacks_cgo_nosgx.go  callbacks_nosgx.go  lib.go  lib_nosgx.go  link_glibclinux_aarch64.go  link_glibclinux_x86_64.attestation.go  link_glibclinux_x86_64.go  link_mac.go  link_muslc.go  link_system.go  link_windows.go  memory.go  version.go  version_nosgx.go
go-sgxvm/proto/: node.proto
go-sgxvm/src/: lib.rs  memory.rs  ocall.rs  types.rs  version.rs
go-sgxvm/src/enclave/: doorbell.rs  enclave_api.rs  mod.rs
go-sgxvm/src/errors/: go.rs  mod.rs  rust.rs
go-sgxvm/src/protobuf_generated/: mod.rs  node.rs
go-sgxvm/types/: ffi.pb.go  mocked_connector.go  mocked_db.go  node.pb.go  queries.go  utils.go
gramine-server/: .gitignore  Cargo.toml  Makefile  README.md  gramine_secret_server.manifest.template
gramine-server/src/: main.rs
integration-tests/contract-v1/: Cargo.toml  Makefile
integration-tests/contract-v1/src/: contract.rs  ibc.rs  lib.rs  msg.rs  state.rs
random_plot/print_random_contract/: Cargo.toml  Makefile
random_plot/print_random_contract/src/: contract.rs  msg.rs
seed-service/: .gitignore  Cargo.toml  Makefile  README.md  rust-toolchain  seeds.csv  server.crt  server.key  server_reqout.txt  serverca.crt  serverca.srl  servercakey.pem  singularity_seed_service.manifest  singularity_seed_service.manifest.sgx  singularity_seed_service.manifest.template  singularity_seed_service.sig  singularity_seed_service.token
seed-service/src/: db.rs  main.rs
seed-service/src/enclaves/: Cargo.toml
sgxvm/: .gitignore  AttestationReportSigningCACert.pem  Cargo.toml  Enclave.config.development.xml  Enclave.config.production.xml  Enclave.edl  Enclave.lds  Makefile  Xargo.toml  bindings.h  cbindgen.toml
sgxvm/.cargo/: config
sgxvm/deoxysii-rust/: .rustfmt.toml  Cargo.toml  LICENSE  Makefile  README.md
sgxvm/deoxysii-rust/.cargo/: config
sgxvm/deoxysii-rust/benches/: mrae.rs
sgxvm/deoxysii-rust/src/: constants.rs  lib.rs  primitives.rs  tests.rs
sgxvm/deoxysii-rust/test-data/: Deoxys-II-256-128.json
sgxvm/proto/: ffi.proto
sgxvm/src/: backend.rs  coder.rs  encryption.rs  lib.rs  memory.rs  ocall.rs  querier.rs  storage.rs  types.rs
sgxvm/src/attestation/: cert.rs  consts.rs  hex.rs  mod.rs  report.rs  self_attestation.rs  types.rs  utils.rs
sgxvm/src/error/: go.rs  mod.rs  rust.rs
sgxvm/src/handlers/: mod.rs  tx.rs
sgxvm/src/key_manager/: consts.rs  epoch_manager.rs  keys.rs  mod.rs  utils.rs
sgxvm/src/precompiles/: blake2f.rs  bn128.rs  compliance_bridge.rs  curve25519.rs  datacopy.rs  ec_recover.rs  mod.rs  modexp.rs  ripemd160.rs  sha256.rs  (+2 more)
(+2063 files in other folders)
