[package]
name = "check-hw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
production = []

# Just here for compatibility with enclave features
verify-validator-whitelist = []
light-client-validation = []
random = []

[dependencies]
sgx_types = { path = "../third_party/incubator-teaclave-sgx-sdk/sgx_types" }
sgx_urts = { path = "../third_party/incubator-teaclave-sgx-sdk/sgx_urts" }
enclave-ffi-types = { path = "../cosmwasm/enclaves/ffi-types", features = [
    "build_headers",
] }
clap = "2.33"
parking_lot = "0.11"
lazy_static = "1.4"
log = "0.4.17"
