[package]
name = "check-hw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
production = []

# Just here for compatability with enclave features
verify-validator-whitelist = []
light-client-validation = []
random = []

[dependencies]
sgx_types = { path = "../third_party/incubator-teaclave-sgx-sdk/sgx_types" }
sgx_urts = { path = "../third_party/incubator-teaclave-sgx-sdk/sgx_urts" }
enclave-ffi-types = { path = "../cosmwasm/enclaves/ffi-types", features = [
    "build_headers",
] }
clap = "2.33"
parking_lot = "0.11"
lazy_static = "1.4"
log = "0.4.17"
hyper = { version = "0.14.15", features = ["full"] }
hyper-rustls = "0.24"
tokio = { version = "1.32", features = ["full"] }
mio = "0.8.11"
base64 = "0.21"
hex = "0.4"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
