[package]
name = "go-cosmwasm"
version = "0.7.0"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2018"
description = "Go bindings for cosmwasm contracts"
repository = "https://github.com/confio/go-cosmwasm"
license = "Apache-2.0"
readme = "README.md"
exclude = [".circleci/*", ".gitignore"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[badges]
circle-ci = { repository = "confio/go-cosmwasm", branch = "master" }
maintenance = { status = "actively-developed" }

[features]
default = ["backtraces"]
backtraces = ["snafu/backtraces"]

[dependencies]
cosmwasm = { path = "../cosmwasm" }
cosmwasm-sgx-vm = { path = "../cosmwasm/lib/sgx-vm" }
errno = "0.2"
snafu = { version = "0.5.0", default-features = false, features = [
    "rust_1_30"
] }
ctor = "0.1.13"
simple_logger = "1.6.0"
log = "0.4.8"

[build-dependencies]
cbindgen = { version = "0.9.1" }
sgx_edl = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v1.1.2" }

[profile.release]
opt-level = 3
debug = false
rpath = true
lto = false
debug-assertions = false
codegen-units = 16
panic = 'unwind'
incremental = true
overflow-checks = true
