[package]
name = "go-cosmwasm"
version = "0.10.0"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2018"
description = "Go bindings for cosmwasm contracts"
repository = "https://github.com/CosmWasm/go-cosmwasm"
license = "Apache-2.0"
readme = "README.md"
exclude = [".circleci/*", ".gitignore"]

[lib]
#crate-type = ["staticlib"]
crate-type = ["cdylib", "lib"]

# the example is to allow us to compile a muslc static lib with the same codebase as we compile the
# normal dynamic libs (best workaround I could find to override crate-type on the command line)
[[example]]
name = "muslc"
path = "src/lib.rs"
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[badges]
circle-ci = { repository = "CosmWasm/go-cosmwasm", branch = "master" }
maintenance = { status = "actively-developed" }

[features]
default = ["backtraces"]
backtraces = ["snafu/backtraces"]
production = ["cosmwasm-sgx-vm/production"]
# This flag enales storing contracts that require the debug-print function
debug-print = ["cosmwasm-sgx-vm/debug-print"]
# This feature compiles a query optimized node with a second enclave used exclusively for queries.
# Putting this functionality in a separate enclave allows improving query performace without hard forks.
query-node = ["cosmwasm-sgx-vm/query-node"]

[dependencies]
cosmwasm-std = { path = "../cosmwasm/packages/std", package = "secret-cosmwasm-std", features = ["iterator"] }
cosmwasm-sgx-vm = { path = "../cosmwasm/packages/sgx-vm", features = [
    "iterator"
] }
errno = "0.2"
snafu = "0.6.3"
serde_json = "1.0"
ctor = "0.1.13"
simple_logger = "1.6.0"
log = "0.4.8"

[dev-dependencies]
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
tempfile = "3.1.0"

[build-dependencies]
cbindgen = { version = "0.14" }
sgx_edl = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "a37ffb9449ba6d5b6e4a9d586bbab864ae732269" }

[profile.release]
opt-level = 3
debug = false
rpath = true
lto = false
debug-assertions = false
codegen-units = 16
panic = 'unwind'
incremental = true
overflow-checks = true
