[package]
name = "singularity_seed_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1", features = ["full"] }
serde = "^1.0.34"
serde_json = "^1.0.34"
serde_derive = "^1.0.34"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["tera"] }
clap = { version = "3", features = ["derive"] }
hyper = "0.14.20"
tokio-rustls = { version = "0.23", default-features = false }
rustls-native-certs = { version = "0.6", optional = true }
futures-util = { version = "0.3.1", default-features = false }
lazy_static = "1.4.0"
rustls = { version = "0.20.1", default-features = false, features = ["tls12"] }
rustls-pemfile = "1.0.0"
indexed-line-reader = "0.2.1"
rand_core = "0.6.4"
base64 = "0.13.0"
enclave_contract_engine = { path = "./src/enclaves/shared/contract-engine" }
