[package]
name = "sgxvm"
description = "EVM adapted for execution inside SGX enclave"
version = "0.1.0"
edition = "2021"

[lib]
name = "enclave"
crate-type = ["staticlib"]

[features]
default = ["hardware_mode"]
mainnet = ["production"]
production = ["hardware_mode"]
hardware_mode = []
simulation_mode = []
attestation_server = []

[dependencies]
derive_more = "0.99"
uuid = { version = "0.8.1", default-features=false }
serde = { git = "https://github.com/mesalock-linux/serde-sgx", features = ["derive"] }
errno = { version = "0.2.8", default-features=false }
thiserror-no-std = "2.0.2"
hex = { version = "0.4.3", default-features=false, features = ["alloc"] }
protobuf = { git = "https://github.com/mesalock-linux/rust-protobuf-sgx", branch = "v2.8" }
chrono = { git = "https://github.com/mesalock-linux/chrono-sgx" }
webpki = { git = "https://github.com/mesalock-linux/webpki", branch = "mesalock_sgx" }
yasna = { git = "https://github.com/mesalock-linux/yasna.rs-sgx", features = ["bit-vec", "num-bigint", "chrono"] }
base64 = { git = "https://github.com/mesalock-linux/rust-base64-sgx" }
num-bigint = { git = "https://github.com/mesalock-linux/num-bigint-sgx" }
bit-vec = { version = "0.6", default-features = false}
serde_json = { git = "https://github.com/mesalock-linux/serde-json-sgx" }
httparse = { version = "1.3.2", default-features=false }
itertools = { version = "0.8" , default-features = false, features = []}
webpki-roots= { git = "https://github.com/mesalock-linux/webpki-roots", branch = "mesalock_sgx" }
lazy_static = { version = "*", default-features = false, features = ["spin_no_std"] }
rustls = { git = "https://github.com/mesalock-linux/rustls", branch = "mesalock_sgx", features = ["dangerous_configuration"] }
hmac = { version = "0.11.0", default-features=false }
sha2 = { version = "0.9.5", default-features=false }
primitive-types = { version = "^0.12", default-features = false, features = ["rlp"] }
evm = { version = "0.41.1", default-features = false }
ethereum = { version = "0.15.0", default-features = false, features = ["with-codec", "with-serde"] }
substrate-bn = { version = "0.6.0", default-features = false }
tiny-keccak = { version = "2.0.2", features = ["fips202"] }
ripemd = { version = "0.1.3", default-features = false }
k256 = { version = "0.11.6", default-features = false, features = ["keccak256", "sha2", "ecdsa"] }
p256 = { version = "0.13.2",default-features = false, features = ["ecdsa"] }
sha3 = { version = "0.10", default-features = false }
rlp = { version = "0.5.1", default-features = false }
num = { version = "0.4", default-features = false, features = ["alloc"] }
bech32 = { version = "0.9.1", default-features = false }
multibase = { version = "0.9.1", default-features=false }
ethabi = { version = "18.0.0", default-features=false }

# Encryption
curve25519-dalek = { version = "4.1.1", default-features = false, features = ["alloc"] }
deoxysii = { version = "0.2.4", path="./deoxysii-rust" }
x25519-dalek = { version = "2.0.0-pre.1", default-features=false, features=[ "u64_backend" ] }
ed25519-dalek = { version = "2.0.0", default-features=false }
rand_chacha = { version = "0.3.1", default-features=false }

# Sgx crates
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "3c903bda" }
sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "3c903bda", features = ["net", "backtrace"]  }
sgx_trts = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "3c903bda" }
sgx_tcrypto = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "3c903bda" }
sgx_tse = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "3c903bda" }
sgx_rand = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "3c903bda" }

[patch."https://github.com/apache/teaclave-sgx-sdk.git"]
sgx_tstd = { path = "./sgx-sdk/sgx_tstd" }
sgx_trts = { path = "./sgx-sdk/sgx_trts" }
sgx_types = { path = "./sgx-sdk/sgx_types" }
sgx_tcrypto = { path = "./sgx-sdk/sgx_tcrypto" }
sgx_tse = { path = "./sgx-sdk/sgx_tse" }
sgx_rand = { path = "./sgx-sdk/sgx_rand" }
