[package]
name = "contract-v1"
version = "0.0.1"
authors = ["SCRT Labs <info@scrtlabs.com>"]
edition = "2018"
description = "A Test contract for to plotting the random values it receives over time"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = []
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { git = "https://github.com/scrtlabs/cosmwasm", package = "secret-cosmwasm-std", branch = "secret", features = [
  "stargate",
  "staking",
  "ibc3",
] }

schemars = "0.8.1"
serde = { version = "1.0.114", default-features = false, features = [
  "derive",
  "alloc"
] }
serde-json-wasm = "0.2.1"
