[package]
name = "secret-enclave"
version = "1.2.4"
authors = ["SCRT Labs <info@scrtlabs.com>"]
edition = "2018"
description = "An enclave running wasmi, to be used by cosmwasm-sgx-vm"

[lib]
name = "secret_enclave"
crate-type = ["staticlib"]

[features]
default = ["SGX_MODE_SW"]
SGX_MODE_SW = []
SGX_MODE_HW = []
production = ["SGX_MODE_HW", "enclave_crypto/production", "enclave_utils/production", "log/max_level_warn", "log/release_max_level_warn"]
debug-print = ["enclave_contract_engine/debug-print"]
test = ["enclave_contract_engine/test", "enclave_crypto/test", "enclave_cosmos_types/test"]

# This annotation is here to trick the IDE into showing us type information about this crate.
# We always compile to the "sgx" target, so this will always be false.
# when compiling to the "sgx" target, we pull this from the target root with an "extern crate" directive
[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = { branch = "v2.0.0-preview", git = "https://github.com/apache/teaclave-sgx-sdk.git", features = [
    "backtrace", "untrusted_time"
] }
sgx_types = { branch = "v2.0.0-preview", git = "https://github.com/apache/teaclave-sgx-sdk.git" }

[dependencies]
sgx_tse = { branch = "v2.0.0-preview", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_rand = { branch = "v2.0.0-preview", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_crypto = { branch = "v2.0.0-preview", git = "https://github.com/apache/teaclave-sgx-sdk.git" }

enclave-ffi-types = { path = "../ffi-types" }

enclave_contract_engine = { path = "../shared/contract-engine" }
enclave_crypto = { path = "../shared/crypto" }
enclave_utils = { path = "../shared/utils" }
enclave_cosmos_types = { path = "../shared/cosmos-types", optional = true }

#serde = { git = "https://github.com/mesalock-linux/serde-sgx", features = [
#  "derive"
#] }
serde = "1.0.138"
# serde_json = { git = "https://github.com/mesalock-linux/serde-json-sgx" }
serde_json = "1.0.82"

ctor = "0.1.13"
derive_more = "0.99"

pwasm-utils = { version = "0.19.0", default-features = false }
parity-wasm = { version = "0.42.2", default-features = false }

base64 = "0.13.0"
# base64 = { rev = "dc7389e10817b078f289386b3b6a852ab6c4c021", git = "https://github.com/mesalock-linux/rust-base64-sgx" }

# for attestation
# chrono = { git = "https://github.com/mesalock-linux/chrono-sgx" }
chrono = "0.4.19"

#num-bigint = { git = "https://github.com/mesalock-linux/num-bigint-sgx" }
num-bigint = "0.4.1"
uuid = "0.8.1"
httparse = { version = "1.3", default-features = false }
itertools = { version = "0.8", default-features = false, features = [] }
bit-vec = { version = "0.6", default-features = false }
lazy_static = "1.4"
hex = "0.4.2"
log = "0.4.8"

webpki = "0.22.0"
webpki-roots = "0.22.3"

yasna = "0.5.0"

rustls = "0.20.6"

#[dependencies.webpki]
#git = "https://github.com/mesalock-linux/webpki"
#branch = "mesalock_sgx"
#
#[dependencies.webpki-roots]
#git = "https://github.com/mesalock-linux/webpki-roots"
#rev = "6ff3be547ac13ccd46ae55605ad6506ce30688ef"

#[dependencies.yasna]
#git = "https://github.com/mesalock-linux/yasna.rs-sgx"
#rev = "a1f50714cd3eb29608ecf7888cacedc173edfdb2"
#default-features = false
#features = ["bit-vec", "num-bigint", "chrono", "mesalock_sgx"]
#
#[dependencies.rustls]
#git = "https://github.com/mesalock-linux/rustls"
#rev = "95b5e79dc24b02f3ce424437eb9698509d0baf58"
#default-features = false
#features = ["dangerous_configuration", "mesalock_sgx"]

[dev-dependencies]
sgx_edl = { branch = "v2.0.0-preview", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
